# Control-Surface

./: .clang-format  .gitignore  .gitmodules  .travis.yml  Analog.cpp  Analog.h  CMakeLists.txt  CMakeLists.txt.in  CMakePresets.json  Digital.cpp  Digital.h  DigitalLatch.cpp  DigitalLatch.h  Encoder.cpp  Guidelines.md  MIDI_controller.h  Makefile  README.md  RotaryEncoder.cpp  RotaryEncoder.h  TODO.md  Tests.md  _config.yml  debug.h  debugSnippets.h  keywords.txt  library.json  library.properties  sendMidi.cpp  sendMidi.h
mock/: Arduino.cpp  CMakeLists.txt  Encoder.h  HardwareSerial.h  HardwareSerial0.cpp  MockMIDI_Interface.hpp  MockSelectable.hpp  Print.h  README.md  gfxfont.h
mock/Core/: Arduino.cpp  Arduino.h  ArduinoMock.hpp  HardwareSerial.h  HardwareSerial0.cpp  Print.cpp  Print.h
mock/Core-Libraries/: SPI.h
src/: AH  Analog.cpp  Analog.h  AnalogHiRes.cpp  AnalogHiRes.h  Arduino_Helpers.dox  Arduino_Helpers.h  Bank.cpp  Bank.h  BankSelector.cpp  BankSelector.h  CMakeLists.txt  ControlChange.cpp  ControlChange.h  Control_Surface.cpp  Control_Surface.h  DebugMIDIOutput.h  DebugMIDI_Interface.h  Digital.cpp  Digital.h  DigitalLatch.cpp  DigitalLatch.h  ExtendedIOElement.h  ExtendedInputOutput.h  MIDIOutput.cpp  MIDIOutput.h  MIDI_Control_Element.h  MIDI_Controller.cpp  MIDI_Controller.h  MIDI_Element.h  MIDI_Input_7SegmentDisplay.h  MIDI_Input_Element.cpp  MIDI_Input_Element.h  MIDI_Input_LED.h  MIDI_Input_V-Pot_Ring.h  MIDI_Input_VU.h  MIDI_Interface.cpp  MIDI_Interface.h  MIDI_controller.cpp  MIDI_controller.h  (+11 more)
src/AH/: Arduino-Wrapper.h  CMakeLists.txt
src/Audio/: AudioVU.cpp  AudioVU.hpp  AudioVULEDs.cpp  AudioVULEDs.hpp  MovingCoilBallistics.cpp  MovingCoilBallistics.hpp  VU.hpp  VolumeControl.cpp  VolumeControl.hpp
src/Banks/: Bank.cpp  Bank.h  Bank.hpp  Bank.ipp  BankAddresses.cpp  BankAddresses.hpp  BankConfig.cpp  BankConfig.hpp  BankConfigAddressable.hpp  BankSelector.cpp  BankSelector.h  BankSelector.hpp  Bankable.hpp  BankableAddresses.cpp  BankableAddresses.hpp  BankableMIDIInput.cpp  BankableMIDIInput.hpp  BankableMIDIInputAddressable.hpp  BankableMIDIOutput.cpp  BankableMIDIOutput.hpp  BankableMIDIOutputAddressable.hpp  ManyAddressesMIDIOuptut.hpp  Selector.cpp  Selector.h  Transposer.hpp
src/Containers/: Array.hpp  BitArray.hpp  Containers.dox  LinkedList.hpp  UniquePtr.hpp  Updatable.hpp
src/Control_Surface/: Control_Surface_Class.cpp  Control_Surface_Class.h  Control_Surface_Class.hpp
src/Debug/: Debug.cpp  Debug.hpp  DebugVal.hpp
src/Def/: CRTP.hpp  Cable.cpp  Cable.hpp  Channel.cpp  Channel.hpp  Def.cpp  Def.hpp  Frequency.cpp  Frequency.hpp  MIDIAddress.cpp  MIDIAddress.hpp  MIDICNChannelAddress.cpp  MIDICNChannelAddress.hpp  TypeTraits.hpp
src/Display/: BitmapDisplay.cpp  BitmapDisplay.hpp  Display.hpp  DisplayElement.cpp  DisplayElement.hpp  DisplayElements.hpp  DisplayHelpers.hpp  DisplayInterface.cpp  DisplayInterface.hpp  NoteBitmapDisplay.cpp  NoteBitmapDisplay.hpp  NoteDisplay.hpp  SelectorDisplay.cpp  SelectorDisplay.hpp  TimeDisplay.hpp  UpdateDisplays.hpp  VPotDisplay.hpp  VUDisplay.hpp
src/Doxygen/: Groups.h
src/Error/: Error.hpp  Exit.cpp
src/ExtendedInputOutput/: AnalogMultiplex.cpp  AnalogMultiplex.h  ExtendedIOElement.cpp  ExtendedIOElement.h  ExtendedInputOutput.cpp  ExtendedInputOutput.h  ShiftRegisterOut.cpp  ShiftRegisterOut.h
src/Filters/: EMA.hpp  Filters.dox  Hysteresis.cpp  Hysteresis.hpp
src/Hardware/: ADCConfig.cpp  Button.cpp  Button.h  Button.hpp  ButtonMatrix.cpp  ButtonMatrix.h  ButtonMatrix.hpp  ButtonMatrix.ipp  FilteredAnalog.cpp  FilteredAnalog.h  FilteredAnalog.hpp  Hardware-Types.hpp  Hardware.dox  IncrementButton.cpp  IncrementButton.hpp  IncrementDecrementButtons.cpp  IncrementDecrementButtons.hpp  LEDs.hpp
src/Helpers/: ADCConfig.hpp  AnalogFilter.h  Array.cpp  Array.hpp  ArrayHelpers.cpp  ArrayHelpers.hpp  ArrayWrapper.hpp  BitArray.cpp  BitArray.hpp  Copy.cpp  Copy.hpp  Debug.hpp  EMA.cpp  EMA.h  EMA.hpp  Error.cpp  Error.hpp  Exit.cpp  Helpers.cpp  Helpers.hpp  Hysteresis.cpp  Hysteresis.h  Hysteresis.hpp  IncreaseBitDepth.hpp  LinkedList.cpp  LinkedList.h  LinkedList.hpp  Linked_List.h  MIDICNChannelAddress.hpp  MillisMicrosTimer.cpp  MillisMicrosTimer.hpp  MillisTimer.cpp  MillisTimer.hpp  MinMaxFix.cpp  MinMaxFix.hpp  PerfCounter.cpp  PerfCounter.h  PrintStream.cpp  PrintStream.h  PrintStream.hpp  (+13 more)
src/MCU/: MCU_Notes.h
src/MIDI_Constants/: Control_Change.cpp  Control_Change.h  Control_Change.hpp  MCU.cpp  MCU.h  MCU.hpp  MCUNameFromNoteNumber.cpp  MCUNameFromNoteNumber.hpp  MCUNameFromNoteNumber.py  Notes.cpp  Notes.hpp  Notes.py  Program_Change.cpp  Program_Change.hpp  Program_Change.py  keywords.yml
src/MIDI_Controller/: MIDI_Controller_Class.cpp  MIDI_Controller_Class.h
src/MIDI_Inputs/: BankableMIDIMatcherHelpers.hpp  ChannelMessageMatcher.cpp  ChannelMessageMatcher.hpp  DecayingVU.hpp  InterfaceMIDIInputElements.cpp  InterfaceMIDIInputElements.hpp  MCU_7SegmentDisplay.hpp  MCU_AssignmentDisplay.hpp  MCU_TimeDisplay.hpp  MCU_VPotRing.hpp  MCU_VU.hpp  MIDIInputCCValue.hpp  MIDIInputElement.cpp  MIDIInputElement.hpp  MIDIInputElementAddressable.hpp  MIDIInputElementCC.cpp  MIDIInputElementCC.hpp  MIDIInputElementChannelPressure.cpp  MIDIInputElementChannelPressure.hpp  MIDIInputElementMatchers.hpp  MIDIInputElementNote.cpp  MIDIInputElementNote.hpp  MIDIInputElementPC.cpp  MIDIInputElementPC.hpp  MIDIInputElementSysEx.cpp  MIDIInputElementSysEx.hpp  MIDINote.cpp  MIDINote.hpp  MIDINoteCCRange-CRTP.hpp  MIDINoteCCRange.hpp  MIDI_Input_7SegmentDisplay.cpp  MIDI_Input_7SegmentDisplay.h  MIDI_Input_CC.cpp  MIDI_Input_CC.hpp  MIDI_Input_ChannelPressure.cpp  MIDI_Input_ChannelPressure.hpp  MIDI_Input_Element.cpp  MIDI_Input_Element.h  MIDI_Input_Element.hpp  MIDI_Input_Element_Addressable.hpp  (+19 more)
src/MIDI_Interfaces/: BLEMIDI.cpp  BLEMIDI.hpp  DebugMIDI_Interface.h  (+34 more)
test/: CMakeLists.txt  MockMIDI_Interface.hpp  MockSelectable.hpp  examples-board-fqbns.yaml  examples-board-options-ci.txt  examples-board-options-travis.txt  examples-board-options.txt  test-main.cpp  test_example.cpp
(+65261 files in other folders)
